--- a/res/layout/widget_layout.xml
+++ b/res/layout/widget_layout.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/dagger_widget"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" 
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" 
     android:contentDescription="@string/desc"
-    android:src="@drawable/img_selector"
+    android:src="@drawable/ic_launcher_widget"
+    
     >
     
 
