--- a/res/layout/widget_layout.xml
+++ b/res/layout/widget_layout.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" 
+    android:background="@drawable/bg"
+    android:gravity="top"
+    android:padding="0.1dp"
+    android:translationY="-15dp"
+   >
+<ImageButton 
     android:id="@+id/dagger_widget"
-    android:layout_width="match_parent"
+    android:layout_width="0dip"
     android:layout_height="match_parent" 
     android:contentDescription="@string/desc"
-    android:src="@drawable/ic_launcher_widget"
-    
+    android:layout_weight="0.5"
+    android:src="@drawable/img_selector"
+     
     >
     
 
 </ImageButton>
+
+</LinearLayout>
