--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -21,6 +21,6 @@
         android:layout_height="wrap_content"
         googleads:adSize="BANNER"
         googleads:adUnitId="@string/admob_id" 
-         android:layout_gravity="top"/>
+         android:layout_gravity="bottom"/>
 
 </FrameLayout>
