--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -1,15 +1,16 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:com.lcs.greenranger="http://schemas.android.com/apk/res-auto" 
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_share"
         android:title="@string/menu_share"
-        android:icon="@drawable/abs__ic_menu_share_holo_dark"
+        android:icon="@drawable/ic_action_share"
         android:orderInCategory="100"        
-        android:showAsAction="ifRoom" 
-        android:actionProviderClass="com.actionbarsherlock.widget.ShareActionProvider"
+        com.lcs.greenranger:showAsAction="always" 
+        com.lcs.greenranger:actionProviderClass="com.actionbarsherlock.widget.ShareActionProvider"
         />
     
     <item android:id="@+id/menu_setas"
         android:title="@string/menu_setas"
         android:icon="@drawable/ic_action_settings"
         android:orderInCategory="200"
-        android:showAsAction="ifRoom" />
+        com.lcs.greenranger:showAsAction="always" />
 </menu>
